--- a/scss/03_layouts/_03_D_footer.scss
+++ b/scss/03_layouts/_03_D_footer.scss
@@ -1,17 +1,14 @@
 .footer{
-    background-color: gray;
-    margin-top: 35px;
+    background-color: #353535;
     padding: 27px 0px 20px 25px;
 
     &__box-logo{
-        background-color: green;
 
         &--logo{
             width: 100px;
         }
     }
     &__box-nav-icones{
-        background-color: red;
         margin-top: 17px;
 
         &--picto{
@@ -22,8 +19,4 @@
 
 .footer__box-nav-icones li, .footer__box-nav li{
     margin-bottom: 7px;
-}
-
-a:hover{
-    background-color: pink;
 }
