--- a/scss/04_components/_04_C_main_section.scss
+++ b/scss/04_components/_04_C_main_section.scss
@@ -37,11 +37,20 @@
             flex-direction: column;
             line-height: 24px;
             margin-bottom: 14px;
+            color: black;
         }
         &--box-picto{
+            background-image: url(/sources/picto/picto_coeur.png);
+            background-size: 25px 22px;
+            margin: 7px 24px 0px 0px;
             width: 25px;
             height: 22px;
-            margin: 7px 24px 0px 0px;
+            cursor: pointer;
+
+            &:hover{
+                background-image: url(/sources/picto/picto_coeur_rose.png);
+                background-size: 25px 22px;
+            }
         }
     }
 }
