--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,7 @@ button, a {
   color: white;
   box-shadow: 0px 5px 5px #e0e1e3;
   width: 218px;
+  cursor: pointer;
 }
 .header__box-titre {
   margin-top: 86px;
