--- a/scss/04_components/_04_A_header.scss
+++ b/scss/04_components/_04_A_header.scss
@@ -43,6 +43,7 @@
             color: white;
             box-shadow: 0px 5px 5px  #e0e1e3;
             width: 218px;
+            cursor: pointer;
         }
     }
     &__box-titre{
