--- a/scss/02_utils/_02_A_variables.scss
+++ b/scss/02_utils/_02_A_variables.scss
@@ -2,5 +2,6 @@ $light: 'Roboto-Light';
 $regular: 'Roboto-Regular';
 $semiBold: 'Roboto-Medium';
 $bold: 'Roboto-Bold';
+$script: 'Shrikhand-Regular';
 
 $margeGauH2: 20px;
