Pages menu responsive terminer

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,6 +22,7 @@ body{
 @import "./02_utils/02_B_placeholders";
 @import "./03_layouts/03_A_header";
 @import "./03_layouts/03_B_main_article";
+@import "./03_layouts/03_C_main_section";
 @import "./03_layouts/03_D_footer";
 @import "./04_components/04_A_header";
 @import "./04_components/04_B_main_article";
