--- a/css/style.css
+++ b/css/style.css
@@ -75,13 +75,21 @@ button, a {
   flex-direction: column;
 }
 
-.header {
-  background-color: white;
+@media screen and (min-width: 1000px) {
+  .header {
+    background-color: #353535;
+  }
 }
 .header__box-logo {
   padding: 22px 0px 13px 0px;
   box-shadow: 0px 5px 5px #e0e1e3;
   position: relative;
+  background-color: white;
+}
+@media screen and (min-width: 1000px) {
+  .header__box-logo {
+    box-shadow: 0px 0px 0px #e0e1e3;
+  }
 }
 .header__box-logo--logo {
   width: 165px;
@@ -140,11 +148,37 @@ button, a {
   height: 3px;
 }
 
+.zone-bouton {
+  display: flex;
+  justify-content: center;
+}
+.zone-bouton--bouton {
+  padding: 15px;
+  margin: 32px 75px 20px 82px;
+  border-radius: 999px;
+  background: linear-gradient(#e872da, #9f5adc);
+  color: white;
+  box-shadow: 0px 5px 5px #e0e1e3;
+  width: 218px;
+  cursor: pointer;
+}
+.zone-bouton--bouton:hover {
+  opacity: 0.8;
+  box-shadow: 0px 5px 5px #c2c3c5;
+}
+
 .box-sections-menu {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 14px;
+}
+@media screen and (min-width: 1150px) {
+  .box-sections-menu {
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
 }
 .box-sections-menu__section {
   width: 349px;
@@ -157,6 +191,11 @@ button, a {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+}
+@media screen and (min-width: 1150px) {
+  .box-sections-menu__section {
+    margin: 10px;
+  }
 }
 .box-sections-menu__section--txt {
   display: flex;
@@ -265,25 +304,6 @@ span {
     opacity: 1;
   }
 }
-.zone-bouton {
-  display: flex;
-  justify-content: center;
-}
-.zone-bouton--bouton {
-  padding: 15px;
-  margin: 32px 75px 20px 82px;
-  border-radius: 999px;
-  background: linear-gradient(#e872da, #9f5adc);
-  color: white;
-  box-shadow: 0px 5px 5px #e0e1e3;
-  width: 218px;
-  cursor: pointer;
-}
-.zone-bouton--bouton:hover {
-  opacity: 0.8;
-  box-shadow: 0px 5px 5px #c2c3c5;
-}
-
 .footer {
   background-color: #353535;
   padding: 27px 0px 20px 25px;
