--- a/scss/03_layouts/_03_A_header.scss
+++ b/scss/03_layouts/_03_A_header.scss
@@ -1,11 +1,19 @@
 .header{
-    background-color: white;
+
+    @media screen and (min-width: 1000px){
+        background-color: #353535;
+    }
     
     &__box-logo{
         @extend %flexCenterH;
         padding: 22px 0px 13px 0px;
         box-shadow: 0px 5px 5px  #e0e1e3;
         position: relative;
+        background-color: white;
+
+        @media screen and (min-width: 1000px){
+        box-shadow: 0px 0px 0px  #e0e1e3;
+        }   
 
         &--logo{
             width: 165px;
@@ -22,6 +30,7 @@
     &__image{
         width: 100%;
         position: relative;
+
     }
 }
 
