Toutes pages terminer et compression des images

--- a/scss/03_layouts/_03_C_main_section.scss
+++ b/scss/03_layouts/_03_C_main_section.scss
@@ -132,6 +132,10 @@ span{
     animation: animSection 2.9s;
 }
 
+.anim-section10{
+    animation: animSection 3s;
+}
+
 @keyframes animSection {
 	0% {
         opacity: 0;
