--- a/css/style.css
+++ b/css/style.css
@@ -10,14 +10,6 @@ body {
   background-color: #f6f6f6;
 }
 
-.plan {
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0.3;
-  z-index: 9;
-}
-
 @font-face {
   font-family: "Roboto-Light";
   src: url("/sources/fonts/Roboto/Roboto-Light.ttf");
@@ -75,11 +67,6 @@ button, a {
   flex-direction: column;
 }
 
-@media screen and (min-width: 1000px) {
-  .header {
-    background-color: #353535;
-  }
-}
 .header__box-logo {
   padding: 22px 0px 13px 0px;
   box-shadow: 0px 5px 5px #e0e1e3;
@@ -293,6 +280,10 @@ span {
 
 .anim-section9 {
   animation: animSection 2.9s;
+}
+
+.anim-section10 {
+  animation: animSection 3s;
 }
 
 @keyframes animSection {
@@ -524,6 +515,7 @@ footer a {
 .section__box-description--box-picto:hover {
   background-image: url(/sources/picto/picto_coeur_rose.png);
   background-size: 25px 22px;
+  transition: ease-in-out 1s;
 }
 
 /*# sourceMappingURL=style.css.map */
