taille height logo modifier

--- a/scss/03_layouts/_03_A_header.scss
+++ b/scss/03_layouts/_03_A_header.scss
@@ -12,7 +12,8 @@
         }   
 
         &--logo{
-            width: 165px;
+            width: 164px;
+            height: 28px;
         }
         &--picto-fleche{
             position: absolute;
