--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,8 @@ button, a {
   }
 }
 .header__box-logo--logo {
-  width: 165px;
+  width: 164px;
+  height: 28px;
 }
 .header__box-logo--picto-fleche {
   position: absolute;
