correction picto acceuil

--- a/scss/04_components/_04_A_header.scss
+++ b/scss/04_components/_04_A_header.scss
@@ -66,27 +66,27 @@
 }
 
 .header__box-nav--picto-tel{
-    background-image: url(./sources/picto/picto_mobile.png);
+    background-image: url(../sources/picto/picto_mobile.png);
 }
 
 .header__box-nav--picto-menu{
-    background-image: url(./sources/picto/picto_menu.png);
+    background-image: url(../sources/picto/picto_menu.png);
 }
 
 .header__box-nav--picto-store{
-    background-image: url(./sources/picto/picto_store.png);
+    background-image: url(../sources/picto/picto_store.png);
 }
 
 .header__box-nav--picto-tel:hover{
-    background-image: url(./sources/picto/picto_mobile_violet.png);
+    background-image: url(../sources/picto/picto_mobile_violet.png);
 }
 
 .header__box-nav--picto-menu:hover{
-    background-image: url(./sources/picto/picto_menu_violet.png);
+    background-image: url(../sources/picto/picto_menu_violet.png);
 }
 
 .header__box-nav--picto-store:hover{
-    background-image: url(./sources/picto/picto_store_violet.png);
+    background-image: url(../sources/picto/picto_store_violet.png);
 }
 
 .header__box-nav--picto-tel, .header__box-nav--picto-menu, .header__box-nav--picto-store{
