--- a/scss/04_components/_04_C_main_section.scss
+++ b/scss/04_components/_04_C_main_section.scss
@@ -41,7 +41,7 @@
             color: black;
         }
         &--box-picto{
-            background-image: url(./sources/picto/picto_coeur.png);
+            background-image: url(../sources/picto/picto_coeur.png);
             background-size: 25px 22px;
             margin: 7px 24px 0px 0px;
             width: 25px;
@@ -49,7 +49,7 @@
             cursor: pointer;
 
             &:hover{
-                background-image: url(./sources/picto/picto_coeur_rose.png);
+                background-image: url(../sources/picto/picto_coeur_rose.png);
                 background-size: 25px 22px;
                 transition: ease-in-out 1s;
             }
